# prime

./: .gitignore  CMakeLists.txt  hld.md  license.md  readme.md
examples/: experiments.prm  functions.prm  hello_world.prm  variables.prm
libraries/prime_common/: CMakeLists.txt
libraries/prime_common/include/prime_common/: prime_asserts.h  prime_cli_parser.h  prime_logger.h
libraries/prime_common/source/prime_common/: prime_asserts.c  prime_cli_parser.c  prime_logger.c
primec/: CMakeLists.txt  primec.todo
primec-old/include/: cli_parser.h  debug.h  linked_list.h  logger.h  main.h  tokenizer.h
primec-old/source/: cli_parser.c  debug.c  logger.c
primec-old/tests/tokenizer/: single_line_comments_test.prm
primec/include/: debug.h  heap_buffer.h  logger.h  main.h  options.h  ring_buffer.h  string_view.h  tokenizer.h
primec/include/primec/: debug.h  lexer.h  location.h  logger.h  token.h  utf8.h  utils.h  version.h
primec/scripts/: build.sh  clean.sh
primec/source/: debug.c  logger.c  main.c  options.c  string_view.c  tokenizer.c
primec/source/primec/: debug.c  lexer.c  logger.c  token.c  utf8.c  utils.c
primec/tests/: comments.prm  invalids.prm  literals.prm  operators.prm
primec/tests/lexer/: comments.prm  experiments.prm  identifiers.prm  invalids.prm  keywords.prm  literals.prm  operators.prm  tokens.prm
toolchain/: CMakeLists.txt  readme.md
toolchain/prime_compiler/: CMakeLists.txt
toolchain/prime_compiler/source/: main.c
toolchain/prime_decompiler/: CMakeLists.txt
toolchain/prime_decompiler/source/: main.c
toolchain/prime_driver/: CMakeLists.txt
toolchain/prime_driver/source/: main.c
toolchain/prime_interpreter/: CMakeLists.txt
toolchain/prime_interpreter/source/: main.c
toolchain/prime_preprocessor/: CMakeLists.txt
toolchain/prime_preprocessor/source/: main.c
toolchain/prime_tester/: CMakeLists.txt
toolchain/prime_tester/source/: main.c
tools/: .gitignore  .todo
tools/tester/: main.py  test.txt
